# matrix-hal-app-boilerplate

./: CMakeLists.txt  README.md
cpp/: matrix-app.cpp
